aws/fiware/ebsi-wallet/deployment.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: ebsi-wallet
spec:
  selector:
    matchLabels:
      app.kubernetes.io/instance: ebsi-wallet
      app.kubernetes.io/name: ebsi-wallet
  template:
    metadata:
      labels:
        app.kubernetes.io/instance: ebsi-wallet
        app.kubernetes.io/name: ebsi-wallet
    spec:
      containers:
      - name: ebsi
        image: 'quay.io/wi_stefan/ebsi-wallet:latest'
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
            name: static
            protocol: TCP
