aws/fiware/ebsi-wallet/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ebsi-wallet
spec:
  type: ClusterIP
  ports: 
    - name: static
      port: 8080
      protocol: TCP
      targetPort: static
  selector:
    app.kubernetes.io/instance: ebsi-wallet
    app.kubernetes.io/name: ebsi-wallet
