aws/fiware/ebsi-wallet/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations: 
    cert-utils-operator.redhat-cop.io/certs-from-secret: ebsi-wallet
  name: ebsi-wallet
spec:
  host: ebsi-wallet.fiware.dev
  port:
    targetPort: 8080
  tls: 
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
  to: 
    kind: Service
    name: ebsi-wallet
